unpackaged/main/default/objects/Revenue__c/fields/Grouping_Set__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Set__c</fullName>
    <label>Grouping Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Margin</fullName>
            </value>
            <value>
                <fullName>Renewal Margin</fullName>
            </value>
            <value>
                <fullName>Direct Costs</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Commercial Director</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Order Processing</fullName>
            </value>
            <value>
                <fullName>Overhead Rent Rates &amp; Insurance</fullName>
                <label>Overhead Property Costs</label>
            </value>
            <value>
                <fullName>Overhead Insurance Costs</fullName>
            </value>
            <value>
                <fullName>Overhead - Salesforce Costs</fullName>
                <label>Overhead Salesforce Costs</label>
            </value>
            <value>
                <fullName>Overhead Computer Costs</fullName>
                <label>Overhead IT Costs</label>
            </value>
            <value>
                <fullName>Overhead Communications Costs</fullName>
            </value>
            <value>
                <fullName>Overhead Marketing Fixed Costs</fullName>
            </value>
            <value>
                <fullName>Overhead Marketing Costs</fullName>
                <label>Overhead Marketing Variable Costs</label>
            </value>
            <value>
                <fullName>Overhead Legal &amp; Professional Fees</fullName>
            </value>
            <value>
                <fullName>Overhead Leasing</fullName>
                <label>Overhead Lease Rental</label>
            </value>
            <value>
                <fullName>Overhead Close Finance Charges</fullName>
                <label>Overhead Close Factoring Charges</label>
            </value>
            <value>
                <fullName>Overhead Bank Charges</fullName>
            </value>
            <value>
                <fullName>Overhead Interest Charges</fullName>
            </value>
            <value>
                <fullName>Overhead Printing Postage &amp; Stationery</fullName>
            </value>
            <value>
                <fullName>Overhead ANO</fullName>
                <label>Overhead Internal Food &amp; Beverage Costs</label>
            </value>
            <value>
                <fullName>Overhead Depreciation</fullName>
            </value>
            <value>
                <fullName>Overhead Amortisation</fullName>
            </value>
            <value>
                <fullName>Overhead Corporation Tax</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>enerjyhub development costs</fullName>
            </value>
            <value>
                <fullName>Overhead Recruitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>