unpackaged/main/default/objects/Revenue__c/fields/Internal_Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account_Industry__c</fullName>
    <label>Internal Account Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEC</fullName>
            </value>
            <value>
                <fullName>AEC - Architect</fullName>
            </value>
            <value>
                <fullName>AEC - Construction/Contractor</fullName>
            </value>
            <value>
                <fullName>AEC - Estates Management</fullName>
            </value>
            <value>
                <fullName>AEC - MEP</fullName>
            </value>
            <value>
                <fullName>AEC - Owner Operator</fullName>
            </value>
            <value>
                <fullName>AEC - Structure</fullName>
            </value>
            <value>
                <fullName>Aerospace &amp; Defense</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Building Products</fullName>
            </value>
            <value>
                <fullName>Consumer Products</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Engineering &amp; Design Services</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Legal</fullName>
            </value>
            <value>
                <fullName>Furniture &amp; Retail Display</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>High Tech, Electronics &amp; Communications</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Manufacturing (unspecified)</fullName>
            </value>
            <value>
                <fullName>Mechanical Components</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Medical &amp; Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Production Engineering</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utilities, Plant &amp; Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>