unpackaged/main/default/objects/Revenue__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <formula>IF( Ageing_Step_1__c &lt;=30, "Current", IF( Ageing_Step_1__c   &gt; 30 ,"OVERDUE", " Other"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aged Debtors Invoice Status</label>
    <type>Text</type>
</CustomField>