unpackaged/main/default/objects/Revenue__c/fields/InvoiceCreditNoteId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCreditNoteId__c</fullName>
    <label>Invoice/CreditNote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>