unpackaged/main/default/objects/Revenue__c/fields/InvoiceCreditNoteLink__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCreditNoteLink__c</fullName>
    <formula>HYPERLINK($Label.InvoiceLinkDomain &amp; InvoiceCreditNoteId__c, InvoiceCreditNoteNumber__c, "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice/CreditNote Link</label>
    <type>Text</type>
</CustomField>