unpackaged/main/default/objects/Revenue__c/fields/InvoiceCreditNoteNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCreditNoteNumber__c</fullName>
    <label>Invoice/CreditNote Number</label>
    <length>65</length>
    <type>Text</type>
</CustomField>