unpackaged/main/default/objects/Revenue__c/fields/InvoiceLineItem__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Line Item</label>
    <referenceTo>InvoiceLineItem__c</referenceTo>
    <relationshipName>InvoiceLineItemJournalEntries</relationshipName>
    <type>Lookup</type>
</CustomField>