unpackaged/main/default/objects/Revenue__c/fields/InvoiceNumberTrig__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumberTrig__c</fullName>
    <label>Invoice Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>