unpackaged/main/default/objects/Revenue__c/fields/IsModified__c.field-meta.xml
<CustomField>
    <fullName>IsModified__c</fullName>
    <formula>CreatedDate &lt;&gt; LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified?</label>
    <type>Checkbox</type>
</CustomField>