unpackaged/main/default/objects/Revenue__c/fields/JAN_COM__c.field-meta.xml
<CustomField>
    <fullName>JAN_COM__c</fullName>
    <formula>IF(MONTH( Date__c )=9,  Commission_Paid__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JAN COM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>