unpackaged/main/default/objects/Revenue__c/fields/JanMarginCY__c.field-meta.xml
<CustomField>
    <fullName>JanMarginCY__c</fullName>
    <formula>IF( DATE( YEAR( TODAY() ) ,01,01)&gt;=  ContractStartDate__c &amp;&amp; DATE( YEAR( TODAY() ) ,01,01)&lt;=  ContractEndDate__c ,  (T_Margin__c / Contract_Months__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jan Margin (Current Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>