unpackaged/main/default/objects/Revenue__c/fields/Lease_Description__c.field-meta.xml
<CustomField>
    <fullName>Lease_Description__c</fullName>
    <label>Lease Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>