unpackaged/main/default/objects/Revenue__c/fields/Lease_Provider__c.field-meta.xml
<CustomField>
    <fullName>Lease_Provider__c</fullName>
    <label>Lease Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Societe Generale</fullName>
            </value>
            <value>
                <fullName>Investec</fullName>
            </value>
            <value>
                <fullName>Aldermore</fullName>
            </value>
            <value>
                <fullName>Peac</fullName>
            </value>
            <value>
                <fullName>Halo Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>