unpackaged/main/default/objects/Revenue__c/fields/Lease_start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_start_Date__c</fullName>
    <label>Lease start Date</label>
    <type>Date</type>
</CustomField>