unpackaged/main/default/objects/Revenue__c/fields/Maint_Billing_on_Invoice_start_Date__c.field-meta.xml
<CustomField>
    <fullName>Maint_Billing_on_Invoice_start_Date__c</fullName>
    <label>Maint Billing on Invoice start Date</label>
    <type>Date</type>
</CustomField>