unpackaged/main/default/objects/Revenue__c/fields/MarginPercentage__c.field-meta.xml
<CustomField>
    <fullName>MarginPercentage__c</fullName>
    <formula>NetMargin__c / NetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>