unpackaged/main/default/objects/Revenue__c/fields/MonthEndDate__c.field-meta.xml
<CustomField>
    <fullName>MonthEndDate__c</fullName>
    <description>Displays the last date of the current month</description>
    <formula>ADDMONTHS(DATE(YEAR(TODAY()),MONTH(TODAY()), 01), 1) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month End Date</label>
    <type>Date</type>
</CustomField>