unpackaged/main/default/objects/Revenue__c/fields/MonthlyRevenue__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRevenue__c</fullName>
    <description>Displays Monthly Revenue (Gross Amount/Contract Months) if Todays date is between the contract start and end dates
(Requested by MM)</description>
    <formula>IF(ContractStartDate__c &lt;= TODAY() &amp;&amp; ContractEndDate__c &gt;= TODAY(), GrossAmount__c / Contract_Months__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>