unpackaged/main/default/objects/Revenue__c/fields/MonthlyTMargin__c.field-meta.xml
<CustomField>
    <fullName>MonthlyTMargin__c</fullName>
    <description>Displays Monthly T Margin (T Margin/Contract Months) if Todays date is between the contract start and end dates
(Requested by MM)</description>
    <formula>IF(ContractStartDate__c &lt;= TODAY() &amp;&amp; ContractEndDate__c &gt;= TODAY(),  T_Margin__c  / Contract_Months__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly T Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>