unpackaged/main/default/objects/Revenue__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <formula>CASE(Type__c,
"SI",  GrossAmount__c,
"SC", (0 - GrossAmount__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>