unpackaged/main/default/objects/Revenue__c/fields/NetMargin__c.field-meta.xml
<CustomField>
    <fullName>NetMargin__c</fullName>
    <formula>CASE(Type__c,
"SI",  GrossMargin__c,
"SC", (0 - GrossMargin__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>