unpackaged/main/default/objects/Revenue__c/fields/Nett_Income_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Nett_Income_Expenditure__c</fullName>
    <formula>T_Margin__c - OC_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nett Income - Expenditure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>