unpackaged/main/default/objects/Revenue__c/fields/No_of_Billing_Months_in_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Billing_Months_in_Days__c</fullName>
    <label>No of Billing Months in Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>