unpackaged/main/default/objects/Revenue__c/fields/No_of_Sites_4C__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sites_4C__c</fullName>
    <label>No of Sites 4C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>