unpackaged/main/default/objects/Revenue__c/fields/Nominal_Description__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Description__c</fullName>
    <label>Nominal Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>