unpackaged/main/default/objects/Revenue__c/fields/OC_Cost__c.field-meta.xml
<CustomField>
    <fullName>OC_Cost__c</fullName>
    <formula>-  OC_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OC Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>