unpackaged/main/default/objects/Revenue__c/fields/OC_Total__c.field-meta.xml
<CustomField>
    <fullName>OC_Total__c</fullName>
    <label>OC Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>