unpackaged/main/default/objects/Revenue__c/fields/Office_Site__c.field-meta.xml
<CustomField>
    <fullName>Office_Site__c</fullName>
    <label>Office Site</label>
    <length>100</length>
    <type>Text</type>
</CustomField>