unpackaged/main/default/objects/Revenue__c/fields/OpportunityNameTrig__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNameTrig__c</fullName>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>