unpackaged/main/default/objects/Revenue__c/fields/OpportunityOwnerNameTrig__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerNameTrig__c</fullName>
    <label>Opportunity Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>