unpackaged/main/default/objects/Revenue__c/fields/Order_Complete__c.field-meta.xml
<CustomField>
    <fullName>Order_Complete__c</fullName>
    <label>Order Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>DS Licence</fullName>
            </value>
            <value>
                <fullName>Var Bonus / EPP</fullName>
            </value>
            <value>
                <fullName>In Dispute</fullName>
            </value>
            <value>
                <fullName>TTL OB Opp</fullName>
            </value>
            <value>
                <fullName>Overcharged</fullName>
            </value>
            <value>
                <fullName>No Cost Expectation - Old Order 15,16,17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>