unpackaged/main/default/objects/Revenue__c/fields/P_L__c.field-meta.xml
<CustomField>
    <fullName>P_L__c</fullName>
    <formula>T_Margin__c -- OC_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P&amp;L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>