unpackaged/main/default/objects/Revenue__c/fields/Payment_Term_Days_V2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Days_V2__c</fullName>
    <label>Payment Term Days V2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30</label>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>