unpackaged/main/default/objects/Revenue__c/fields/PI_Expectation_Cost_var__c.field-meta.xml
<CustomField>
    <fullName>PI_Expectation_Cost_var__c</fullName>
    <formula>Cost__c-Dassault_Invoice_Amount_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PI Expectation Cost var +/-</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>