unpackaged/main/default/objects/Revenue__c/fields/PNL_Completed__c.field-meta.xml
<CustomField>
    <fullName>PNL_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PNL Completed</label>
    <type>Checkbox</type>
</CustomField>