unpackaged/main/default/objects/Revenue__c/fields/PNLREF__c.field-meta.xml
<CustomField>
    <fullName>PNLREF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNL</label>
    <referenceTo>PNL__c</referenceTo>
    <relationshipLabel>Revenue Recognised (PNL)</relationshipLabel>
    <relationshipName>Revenue_Recognised1</relationshipName>
    <type>Lookup</type>
</CustomField>