unpackaged/main/default/objects/Revenue__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>CASE(Type__c,
"SI", InvoiceLineItem__r.Product__r.ProductCode,
"SC", CreditNoteLineItem__r.Product__r.ProductCode,
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code (Formula)</label>
    <type>Text</type>
</CustomField>