unpackaged/main/default/objects/Revenue__c/fields/ProductType2__c.field-meta.xml
<CustomField>
    <fullName>ProductType2__c</fullName>
    <formula>CASE(Type__c,
  "SI",  InvoiceLineItem__r.ProductType__c,
  "SC", CreditNoteLineItem__r.ProductType__c,
  "Error")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type (Formula)</label>
    <type>Text</type>
</CustomField>