unpackaged/main/default/objects/Revenue__c/fields/Promised_For_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Promised_For_Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>