unpackaged/main/default/objects/Revenue__c/fields/PY__c.field-meta.xml
<CustomField>
    <fullName>PY__c</fullName>
    <formula>IF(YEAR( Date__c )=1, P_L__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>