unpackaged/main/default/objects/Revenue__c/fields/Q1_P_L__c.field-meta.xml
<CustomField>
    <fullName>Q1_P_L__c</fullName>
    <formula>IF(MONTH( Date__c )&lt;=3, P_L__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 P&amp;L</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>