unpackaged/main/default/objects/Revenue__c/fields/Q2_P_L__c.field-meta.xml
<CustomField>
    <fullName>Q2_P_L__c</fullName>
    <formula>IF(CEILING(MONTH(  Date__c)/3) = 2,   P_L__c  , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 P&amp;L</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>