unpackaged/main/default/objects/Revenue__c/fields/Q2_Q1_Var__c.field-meta.xml
<CustomField>
    <fullName>Q2_Q1_Var__c</fullName>
    <formula>Q2_P_L__c - Q1_P_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 - Q1 Var</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>