unpackaged/main/default/objects/Revenue__c/fields/Q3_Q2_Var__c.field-meta.xml
<CustomField>
    <fullName>Q3_Q2_Var__c</fullName>
    <formula>Q3_P_L__c - Q2_P_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 - Q2 Var</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>