unpackaged/main/default/objects/Revenue__c/fields/Q4_Q3__c.field-meta.xml
<CustomField>
    <fullName>Q4_Q3__c</fullName>
    <formula>Q4_P_L__c - Q3_P_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q4 - Q3 Var</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>