unpackaged/main/default/objects/Revenue__c/fields/Quote_Entry_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Entry_Number__c</fullName>
    <formula>VALUE(LEFT( Name , 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Entry Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>