unpackaged/main/default/objects/Revenue__c/fields/Quote_Number_For_Checking__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number_For_Checking__c</fullName>
    <formula>TEXT( Quote_Entry_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number For Checking</label>
    <type>Text</type>
</CustomField>