unpackaged/main/default/objects/Revenue__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <formula>IF(Rate_Step_2__c ="Renewal",0.05,
IF(Rate_Step_2__c ="New",0.10,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>