unpackaged/main/default/objects/Revenue__c/fields/Rate_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Rate_Step_1__c</fullName>
    <formula>BusinessType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Step 1</label>
    <type>Text</type>
</CustomField>