unpackaged/main/default/objects/Revenue__c/fields/Rate_Step_2__c.field-meta.xml
<CustomField>
    <fullName>Rate_Step_2__c</fullName>
    <formula>IF( Grouping__r.Name ="Donna Callan ","Renewal",

 BusinessType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Step 2</label>
    <type>Text</type>
</CustomField>