unpackaged/main/default/objects/Revenue__c/fields/RR_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>RR_CONTACT__c</fullName>
    <formula>Invoice__r.ShippingAccount__r.DataServicesPrimaryContact__r.PrimaryUserContact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR CONTACT</label>
    <type>Text</type>
</CustomField>