unpackaged/main/default/objects/Revenue__c/fields/RR_no_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>RR_no_of_Sites__c</fullName>
    <formula>Opportunity__r.No_Of_SItes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of SItes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>