unpackaged/main/default/objects/Revenue__c/fields/S_IMPORT__c.field-meta.xml
<CustomField>
    <fullName>S_IMPORT__c</fullName>
    <label>S IMPORT</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>