unpackaged/main/default/objects/Revenue__c/fields/Sage_Account_Number_RR__c.field-meta.xml
<CustomField>
    <fullName>Sage_Account_Number_RR__c</fullName>
    <formula>Invoice__r.SageAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sage Account Number RR</label>
    <type>Text</type>
</CustomField>